--- a/r8ted.client/index.html
+++ b/r8ted.client/index.html
@@ -5,15 +5,16 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066" />
+  <link rel="icon"
+    href="https://cdn.shopify.com/s/files/1/0264/6579/6143/files/Motion_Pic__Role_of_music_in_film_large.png?v=1589299898" />
   <title>
-    r8ted.client
+    MVY
   </title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but r8ted.client doesn't work properly without JavaScript
+    <strong>We're sorry but MVY doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
