--- a/r8ted.client/index.html
+++ b/r8ted.client/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <noscript>
-    <strong>MVY doesn't work properly without JavaScript
+    <strong>Sorry, MVY doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
