--- a/r8ted.client/index.html
+++ b/r8ted.client/index.html
@@ -15,7 +15,7 @@
 <body>
   <noscript>
     <strong>Sorry, MVY doesn't work properly without JavaScript
-      enabled. Please enable it to continue :D</strong>
+      enabled. Please enable it to continue!</strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
